[package]
edition = "2021"
name = "rp2040-project-template"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
#embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-hal-compat = {path="../embedded-hal-compat"}#"0.6.1"
embedded-hal-02 = { version = "0.2.7", package="embedded-hal", features = ["unproven"]  }
embedded-hal = "1.0.0-alpha.7"
embedded-graphics = "0.7.1"
mipidsi = "0.3.0"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"

paste = "1.0.9"
#quote = "1.0"

fugit = "0.3.6"
numtoa = "0.2.4"
nb = "*"
defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
radio = "0.11.1"

shift-register = {path="../shift-register"}

heapless = "0.7.16"
# We're using a Pico by default on this template
rp-pico = "0.5"
#sx127x_lora ="0.3.1"
sh1107 = {path = "../sh1107", features = ["graphics"]}
radio-sx127x  = {  git = "https://github.com/rust-iot/rust-radio-sx127x", default-features = false }
#radio-sx127x  = {  path = "../rust-radio-sx127x", default-features = false }
# but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
# sparkfun-pro-micro-rp2040 = "0.3"

# If you're not going to use a Board Support Package you'll need these:
# rp2040-hal = { version="0.6", features=["rt"] }
# rp2040-boot2 = "0.2"

bitmask-enum = "2.0.1"
ssd1681 = {path = "../ssd1681", features = ["graphics"]}
#ssd1681 = {version = "0.1.0", features = ["graphics"]}
[[bin]]
path = "src/eink.rs"
name = "eink"

[[bin]]
path = "src/buttons.rs"
name = "buttons"

[[bin]]
path = "src/display.rs"
name = "display"

[[bin]]
path = "src/keyboard.rs"
name = "keyboard"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
